--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "start": "db-migrate up; node server.js"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
     "db-migrate": "^0.10.2",
     "db-migrate-pg": "^0.2.5",
     "express": "^4.16.2",
+    "jquery": "^3.2.1",
     "pg-promise": "^7.3.2",
+    "tether": "^1.4.3",
     "underscore": "^1.8.3"
   }
 }
